--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"preview-web": "cd web && npm run preview"
 	},
 	"dependencies": {},
-	  "devDependencies": {
+	 "devDependencies": {
 	    "@citizenfx/client": "^2.0.7900-1",
 	    "@citizenfx/server": "^2.0.7900-1",
 	    "@types/node": "^18.11.10",
@@ -22,6 +22,7 @@
 	    "http-server": "^14.1.1",
 	    "rcon-client": "^4.2.4",
 	    "typescript": "^5.4.5",
-	    "vite": "^3.2.3"
+	    "vite": "^3.2.3",
+	    "concurrently": "^8.2.0"
 	  }
 }
