--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"build": "node scripts/build.js",
+		"build": "node ./prod.build.js",
 		"dev": "concurrently \"node scripts/dev.js\" \"cd web && yarn build --watch\"",
 		"postinstall": "cd web && yarn install",
 		"webI": "cd web && yarn add",
@@ -13,6 +13,7 @@
 		"watchres": "node scripts/watchres.js"
 	},
 	"dependencies": {
+		"@overextended/ox_lib": "^3.22.2",
 		"esbuild-plugin-fileloc": "^0.0.6"
 	},
 	"devDependencies": {
