--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
 	"type": "module",
 	"scripts": {
 		"build": "node ./prod.build.js",
-		"dev": "concurrently \"node scripts/dev.js\" \"cd web && yarn build --watch\"",
+		"dev": "node ./dev.js",
 		"postinstall": "cd web && yarn install",
 		"webI": "cd web && yarn add",
-		"preview-web": "cd web && npm run preview",
-		"watchres": "node scripts/watchres.js"
+		"preview-web": "cd web && npm run preview"
 	},
 	"dependencies": {
 		"esbuild-plugin-fileloc": "^0.0.6"
