--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,7 @@
 		"start": "vite",
 		"start:game": "vite build --watch",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite"
 	},
 	"dependencies": {
 		"dayjs": "^1.11.7",
