--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 		"web": "cd web && npm run preview"
 	},
 	"dependencies": {
-		"esbuild-plugin-fileloc": "^0.0.6"
+		"esbuild-plugin-fileloc": "^0.0.6",
+		"fivem-js": "^1.5.2"
 	},
 	"devDependencies": {
 		"@citizenfx/client": "^2.0.7900-1",
 		"@citizenfx/server": "^2.0.7900-1",
 		"@overextended/ox_lib": "^3.22.2",
+		"@types/json5": "^2.2.0",
 		"@types/node": "^18.11.10",
 		"chokidar": "^3.5.3",
 		"concurrently": "^8.2.0",
@@ -25,6 +27,7 @@
 		"esbuild-plugin-clean": "^1.0.1",
 		"esbuild-plugin-tsc": "^0.4.0",
 		"http-server": "^14.1.1",
+		"json5": "^2.2.3",
 		"rcon-client": "^4.2.4",
 		"typescript": "^5.4.5",
 		"vite": "^3.2.3"
