--- a/config.jsonc
+++ b/config.jsonc
@@ -1,4 +1,10 @@
 // This is the config file. Edit to you imagination.
 {
-	"respawnCoords": [296.8268, -584.465, 43.1326]
+	"string": "Hello World",
+	"number": 123,
+	"boolean": true,
+	"array": [1, 2, 3],
+	"object": {
+		"something": "value"
+	}
 }
