--- a/web/package.json
+++ b/web/package.json
@@ -1,38 +1,27 @@
 {
-	"name": "web",
-	"private": true,
-	"version": "0.1.0",
-	"type": "module",
-	"homepage": "web/build",
-	"scripts": {
-		"start": "vite",
-		"start:game": "vite build --watch",
-		"build": "tsc && vite build",
-		"preview": "vite"
-	},
-	"dependencies": {
-		"dayjs": "^1.11.7",
-		"localforage": "^1.10.0",
-		"lodash": "^4.17.21",
-		"match-sorter": "^6.3.1",
-		"postcss": "^8.4.19",
-		"prettier": "^2.8.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"recoil": "^0.7.6",
-		"sort-by": "^0.0.2",
-		"tailwindcss": "^3.2.4"
-	},
-	"devDependencies": {
-		"@types/react": "^18.0.24",
-		"@types/react-dom": "^18.0.8",
-		"@typescript-eslint/eslint-plugin": "^5.44.0",
-		"@typescript-eslint/parser": "^5.44.0",
-		"@vitejs/plugin-react": "^2.2.0",
-		"autoprefixer": "^10.4.13",
-		"eslint": "^8.28.0",
-		"eslint-plugin-react": "^7.31.11",
-		"typescript": "^4.6.4",
-		"vite": "^3.2.3"
-	}
+  "name": "mp-ui",
+  "homepage": "web/build",
+  "private": true,
+  "type": "module",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "watch": "vite build --watch",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.6.3",
+    "vite": "^5.0.0"
+  }
 }
