--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
 	"files.exclude": {
 		"**/package.json": true,
+		"**/package-lock.json": true,
 		"**/tsconfig.json": true,
 		"**/yarn.lock": true,
 		"**/build.js": true,
