--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "node build.js",
-		"watch": "node build.js --watch"
+		"watch": "node build.js --watch",
+		"dev": "node build.js --obfuscate"
 	},
 	"keywords": [],
 	"author": "",
@@ -16,6 +17,7 @@
 		"@citizenfx/server": "^2.0.14862-1",
 		"esbuild": "^0.17.19",
 		"glob": "^10.3.10",
+		"javascript-obfuscator": "^4.1.1",
 		"typescript": "^5.8.3"
 	}
 }
