--- a/package.json
+++ b/package.json
@@ -1,23 +1,63 @@
 {
-	"name": "fivem_script",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"build": "node build.js",
-		"watch": "node build.js --watch",
-		"dev": "node build.js --obfuscate"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"type": "commonjs",
-	"devDependencies": {
-		"@citizenfx/client": "^2.0.15015-1",
-		"@citizenfx/server": "^2.0.14862-1",
-		"esbuild": "^0.17.19",
-		"glob": "^10.3.10",
-		"javascript-obfuscator": "^4.1.1",
-		"typescript": "^5.8.3"
-	}
+  "name": "fivem-fullstack",
+  "private": true,
+  "type": "commonjs",
+  "main": "index.js",
+  "description": "",
+  "scripts": {
+    "build": "run-p build:ts build:ui",
+    "watch": "run-p watch:ts watch:ui",
+    "dev": "run-p dev:ts watch:ui",
+    "build:ts": "cd fivem && node build.js",
+    "watch:ts": "cd fivem && node build.js --watch",
+    "dev:ts": "cd fivem && node build.js --obfuscate",
+    "build:ui": "cd react && vite build",
+    "watch:ui": "cd react && vite",
+
+		"postinstall": "yarn build"
+  },
+  "dependencies": {
+    "@citizenfx/client": "^2.0.15015-1",
+    "@types/react": "^18.2.44",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.6.8",
+    "cra-template": "^1.2.0",
+    "lilconfig": "^3.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.3.3",
+    "vite": "^4.4.9"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@citizenfx/server": "^2.0.14862-1",
+    "@types/node": "^18.19.35",
+    "esbuild": "^0.17.19",
+    "glob": "^10.3.10",
+    "javascript-obfuscator": "^4.1.1",
+    "npm-run-all": "^4.1.5",
+    "path": "^0.12.7",
+    "sass": "^1.69.7",
+    "sass-embedded": "^1.83.4",
+    "url": "^0.11.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
