made nui callbacks easier.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
 		"**/index.tsx":true,
 		"**/vite-env.d.ts":true,
 		"**/.env":true,
-		"**/index.html":true,
+		"**/index.html":false,
 		"**/vite.config.ts":true,
 		"**/.gitattributes":true,
 		"**/.gitignore":true,
