created a resource-creator branch
This resource-creator is a monrepo meant to build, watch, and obfuscate multiple resources at once.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,19 @@
 {
 	"files.exclude": {
-		"**/package.json": true,
-		"**/package-lock.json": true,
-		"**/tsconfig.json": true,
-		"**/yarn.lock": true,
-		"**/build.js": true,
-		"**/yarn-error.log": true,
-		"**/.yarn.installed": true,
-		"**/node_modules": true,
-		"**/index.css":true,
-		"**/index.tsx":true,
-		"**/vite-env.d.ts":true,
-		"**/.env":true,
-		"**/index.html":false,
-		"**/vite.config.ts":true,
-		"**/.gitattributes":true,
-		"**/.gitignore":true,
+		"**/package.json": false,
+		"**/package-lock.json": false,
+		"**/yarn.lock": false,
+		"**/build.js": false,
+		"**/yarn-error.log": false,
+		"**/.yarn.installed": false,
+		"**/node_modules": false,
+		"**/.gitattributes":false,
+		"**/.gitignore":false,
+
+		"**/dist":false,
+		"**/__client_main.ts":false,
+		"**/__server_main.ts":false,
+		"**/__shared_main.ts":false,
+		"**/tsconfig.json":false,
 	}
 }
