--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
-	"compilerOptions": {
-		"target": "ES2020",
-		"module": "ESNext",
-		"moduleResolution": "node",
-		"strict": true,
-		"outDir": "production",
-		"rootDir": ".",
-		"esModuleInterop": true,
-		"allowJs": false,
-		"types": []
-	},
-	"include": [
-		"fivem/client/**/*.ts",
-		"fivem/server/**/*.ts",
-		"types",
-	]
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "baseUrl": "./",
+    "paths": {
+			"@/*": ["packages/*"]
+    },
+    "typeRoots": [
+      "packages/globals/*",
+      "node_modules/@types"
+    ],
+    "allowJs": true,
+    "checkJs": false,
+    "noEmit": true
+  },
+  "include": ["packages/**/*", "globals/**/*.ts"]
 }
