--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,6 @@
 		"**/__server_main.ts":false,
 		"**/__shared_main.ts":false,
 		"**/tsconfig.json":false,
+		"**/build.config.json":false
 	}
 }
