--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,18 +3,19 @@
 		"**/package.json": true,
 		"**/package-lock.json": true,
 		"**/yarn.lock": true,
-		"**/build.js": false,
 		"**/yarn-error.log": true,
 		"**/.yarn.installed": true,
 		"**/node_modules": true,
 		"**/.gitattributes":true,
 		"**/.gitignore":true,
 
-		"**/dist":false,
+		"**/dist":true,
+		"**/build.js":true,
+		"**/newResource.js":true,
 		"**/__client_main.ts":true,
 		"**/__server_main.ts":true,
 		"**/__shared_main.ts":true,
 		"**/tsconfig.json":true,
-		"**/build.config.json":false
+		"**/build.config.json":true
 	}
 }
